# PlaceRecognition-LoopDetection

./: README.md
AlgorithmCode/: CMakeLists.txt  input_info.txt  input_paths.txt~
AlgorithmCode/source/: main.cpp
LoopDetection/: LoopDetectionDrawPoses.m  VisualizeImageMatches.m  VisualizeMatchedRegionOnMap.m  image_matches.txt
PlaceRecognition/: LoopDetectionDrawPoses.m  VisualizeImageMatches.m  VisualizeMatchedRegionOnMap.m  image_matches.txt
